--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -20,6 +20,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#005faf",
+  "theme_color": "#ffd40b",
   "background_color": "#10121f"
 }
